--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,16 @@ header h2 {
     background-color: #901CAD;
 }
 
+/* style for tabs */
+/* 
 .tab-content {
     border: 1px solid #DDD;
     border-top: none;
     padding: 10px;
+} */
+
+/* fix accordion headers blue underline  */
+a, a:hover {
+    color: inherit;
+    text-decoration: none;
 }
