--- a/css/styles.css
+++ b/css/styles.css
@@ -49,3 +49,14 @@ a, a:hover {
     color: inherit;
     text-decoration: none;
 }
+
+.carousel-caption {
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.carousel {
+    border: 3px solid #5637DD;
+}
