--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,32 @@
 body {
-    font-family: "Open Sans", sans-serif;
-}
+  font-family: "Open Sans", sans-serif; }
 
 h1, h2, h3 {
-    font-family: "Lobster", cursive;
-}
+  font-family: "Lobster", cursive; }
 
 h2 {
-    color: #3046c5;
-}
+  color: #3046C5; }
 
 header h2 {
-    color: #cec8ff;
-}
+  color: #CEC8FF; }
 
 .site-footer {
-    background-image: linear-gradient(#CEC8FF, white);
-    padding: 20px 0;
-}
+  background-image: linear-gradient(#CEC8FF, white);
+  padding: 20px 0; }
 
 .jumbotron {
-    margin: 0;
-    padding: 30px;
-    background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
-    color: white;
-}
+  margin: 0;
+  padding: 30px;
+  background-image: linear-gradient(to right, #5637dd, #3046C5, #60106b);
+  color: white; }
 
 .row-content {
-    padding: 50px 0;
-    border-bottom: 1px ridge;
-    min-height: 200px;
-}
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px; }
 
 .navbar {
-    background-color: #901CAD;
-}
+  background-color: #901CAD; }
 
 /* style for tabs */
 /* 
@@ -43,27 +35,22 @@ header h2 {
     border-top: none;
     padding: 10px;
 } */
-
 /* fix accordion headers blue underline  */
 a, a:hover {
-    color: inherit;
-    text-decoration: none;
-}
+  color: inherit;
+  text-decoration: none; }
 
 .carousel-caption {
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  padding-left: 20px;
+  padding-right: 20px; }
 
 .carousel {
-    border: 3px solid #5637DD;
-}
+  border: 3px solid #5637dd; }
 
 #carouselButton {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    z-index: 100;
-}
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100; }
